--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <h1>Vue Basics</h1>
-    <div id="app"></div>
+    <div id="app">{{title}}</div>
+
+    <script src="./app.js"></script>
   </body>
 </html>
