--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <h1>Vue Basics</h1>
-    <div id="app">{{title}}</div>
+    <div id="app">
+      <h2>{{title}}</h2>
+      <p>{{ greet('morning') }}</p>
+    </div>
 
     <script src="./app.js"></script>
   </body>
