--- a/index.html
+++ b/index.html
@@ -5,23 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vue Basics</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <style>
-      .canvas {
-        width: 300px;
-        height: 300px;
-        background-color: #ddd;
-        margin-top: 20px;
-      }
-    </style>
   </head>
   <body>
     <h1>Vue Basics</h1>
     <div id="app">
       <h2>{{title}}</h2>
-      <button @click="logEvent">Log Event</button>
-      <div class="canvas" @mousemove="logCoords">
-        {{coords.x}}, {{coords.y}}
-      </div>
+      <p>My Name is {{name}}</p>
+      <input type="text" @keyup="updateName" />
+      <input type="text" @keypress="updateName" />
     </div>
 
     <script src="./app.js"></script>
