--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <h1>Vue Basics</h1>
     <div id="app">
       <h2>{{title}}</h2>
-      <p>My Name is {{name}}</p>
-      <input type="text" v-model="name" />
-      <p>My Name is {{name}}</p>
+      <button @click="logMessage">Click Message</button>
+      <button @click.alt="logMessage">Click-alt Message</button>
+      <button @click.shift="logMessage">Click-shift Message</button>
+      <a href="www.https:://google.com" @click.prevent="logMessage">Google</a>
     </div>
 
     <script src="./app.js"></script>
