15. Looping with v-for

--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     <h1>Vue Basics</h1>
     <div id="app">
       <h2>{{title}}</h2>
-      <p v-if="showName">Mario</p>
-      <p v-else-if="showAge">25</p>
-      <button @click="nameToggle">Toggle Name {{showName}}</button>
-      <button @click="ageToggle">Toggle Age {{showAge}}</button>
+      <ul>
+        <li v-for="item in items">{{ item }}</li>
+      </ul>
+
+      <div v-for="(ninja, index) in ninjas">
+        <p>{{index}} - {{ninja.name}}</p>
+        <p>{{ninja.age}}</p>
+        <p>{{ninja.belt}}</p>
+      </div>
     </div>
 
     <script src="./app.js"></script>
